# cpp-app-template

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: bash.instructions.md  cmake.instructions.md  cpp.instructions.md  markdown.instructions.md
.github/prompts/: doc-audit.prompt.md  execute-plan.prompt.md  generate-plan.prompt.md
.github/workflows/: ci.yml
app/sampleApp/: CMakeLists.txt
app/sampleApp/src/: main.cpp
doc/: ARCHITECTURE.md  PRD.md  implementation_plan_phase_1.md  implementation_plan_vcpkg.md
lib/logger/: CMakeLists.txt
lib/logger/include/logger/: ILogger.hpp  LoggerFactory.hpp
lib/logger/src/: ConsoleLogger.cpp
script/: clang-format-all.sh  clang-tidy-all.sh  vcpkg-bootstrap.sh
test/int/appIntTest/: CMakeLists.txt
test/int/appIntTest/src/: AppIntTest.cpp
test/unit/loggerUnitTest/: CMakeLists.txt
test/unit/loggerUnitTest/src/: LoggerFactoryTest.cpp
vcpkg/triplets/: toolchain-gnu.cmake
